Fixing compile issues